--- a/ModernWebDevelopement/style.css
+++ b/ModernWebDevelopement/style.css
@@ -1,18 +1,19 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     background-color: #000;
-    /* font-family: "General Sans"; */
+    font-family: 'Arial', sans-serif;
 }
 
-html,body {
+html, body {
     height: 100%;
     width: 100%;
+    color: white;
 }
 
 #main {
     width: 100%;
-    color: white;
     background-color: #000;
 }
 
@@ -20,6 +21,7 @@ html,body {
     width: 100%;
     height: 100vh;
     position: relative;
+    padding: 0 2vw;
 }
 
 #navbar {
@@ -27,27 +29,21 @@ html,body {
     align-items: center;
     justify-content: space-between;
     margin-top: 30px;
-
 }
 
-#name {
+#name #menu {
     text-decoration: none;
     color: white;
     font-weight: 700;
-    margin-left: 30px;
+    font-size: 1.5rem;
 }
 
-#menu {
-    color: white;
-    margin-right: 30px;
-}
 
 #text1 {
     color: #a3a3a3;
     margin-top: 100px;
     margin-left: 30px;
     font-size: 10vw;
-    /* font-family: "General Sans Medium"; */
     line-height: 1;
 }
 
@@ -59,10 +55,12 @@ html,body {
     width: 100%;
 }
 
-#text3 {  
+#text3 {
     color: white;
     margin-left: 46vw;
     font-weight: 600;
+    font-size: 1.2rem;
+    margin-top: 20px;
 }
 
 .chhotiHeadings {
@@ -72,21 +70,13 @@ html,body {
     margin-right: 30px;
 }
 
-#startingKaFooter {
-    /* margin: 0 30px; */
-    padding: 0 2vw;
-    position: absolute;
-    bottom: 40px;
-    width: 95vw;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
+
 
 #startingKaFooter a {
     text-decoration: none;
     color: white;
     font-weight: 700;
+    font-size: 1rem;
 }
 
 #middle {
@@ -95,31 +85,35 @@ html,body {
 
 .names {
     position: relative;
-    width: 95vw;
+    width: 95%;
     height: 170px;
-    /* padding: 0 2vw; */
     display: flex;
     align-items: center;
     justify-content: space-between;
     font-size: larger;
     border-top: 1px solid #a3a3a3;
     border-bottom: 1px solid #a3a3a3;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
-#chandu {
-    margin-top: 80px;
+.names:hover {
+    background-color: #1a1a1a;
 }
 
 .bade {
-    opacity: 0.6;
+    opacity: 0.8;
 }
 
 .names img {
-    height: 150%;
-    position: absolute;
-    z-index: 999;
-    opacity: 0;
-    border-radius: 1.5rem;
+    height: 100px;
+    border-radius: 1rem;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+.names:hover img {
+    transform: scale(1.1);
+    opacity: 1;
 }
 
 .me {
@@ -128,17 +122,15 @@ html,body {
     align-items: center;
     gap: 30px;
     padding: 5vw 5vw;
-    padding-left: 25vw;
+    flex-wrap: wrap;
 }
 
 .me img {
-    position: relative;
-    border-radius: 90%;
+    border-radius: 50%;
     width: 200px;
-    z-index: 1;
 }
 
-#para p{
+#para p {
     width: 25rem;
     line-height: 1.6;
     margin-bottom: 20px;
@@ -150,17 +142,19 @@ html,body {
     font-weight: 700;
     border: 1px solid white;
     border-radius: 2rem;
-    font-weight: 700;
     padding: 7px 15px;
+    display: inline-block;
+    transition: all 0.5s ease;
 }
-#para a:hover{
+
+#para a:hover {
     background-color: white;
     color: black;
-    transition: all 0.5s;
 }
 
 #para h5 {
     opacity: 0.7;
+    margin-bottom: 10px;
 }
 
 #endlink {
@@ -172,6 +166,7 @@ html,body {
 #endlink h5 {
     opacity: 0.5;
     font-size: 11px;
+    margin-bottom: 10px;
 }
 
 .enda {
@@ -195,13 +190,15 @@ html,body {
 .enda:hover::after {
     width: 100%;
 }
-#footer{
+
+#footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 2vw 3vw 2vw ;
+    padding: 0 2vw 3vw 2vw;
 }
-#circle{
+
+#circle {
     height: 10px;
     width: 10px;
     background-color: white;
@@ -209,12 +206,15 @@ html,body {
     border-radius: 50%;
     position: absolute;
     z-index: 9999;
-    transition: all cubic-bezier(0.19, 1, 0.22, 1)0.5s;
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.5s;
 }
-.loadingAnimation{
+
+.loadingAnimation {
     width: fit-content;
     overflow: hidden;
 }
-.loadingAnimation .loadingAnimationEL{
+
+.loadingAnimation .loadingAnimationEL {
     transform: translateY(100%);
+    transition: transform 0.5s ease;
 }
